# ml_ops_playground

./: FEAST_WALKTHROUGH.md  INITIAL_PLAN.md  README.md  download_data.sh  pyproject.toml
data/: full_data_cleaned.csv
features/fitness_features/feature_repo/: feature_definitions.py  feature_store.yaml
features/fitness_features/feature_repo/data/: driver_stats.parquet
notebooks/: 01a_baseline_model.ipynb  01b_feast_features.ipynb  1a_baseline_model.ipynb
